@@ -1,15 +1,16 @@
 package com.omis.userManagementService.service.impl;
 
+import com.omis.userManagementService.models.Role;
 import com.omis.userManagementService.models.Roleroute;
+import com.omis.userManagementService.models.Route;
 import com.omis.userManagementService.repository.RolerouteRepository;
+import com.omis.userManagementService.repository.RouteRepository;
 import com.omis.userManagementService.service.RoleRouteService;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @Transactional
@@ -18,12 +19,19 @@ public class RoleRouteServiceImpl implements RoleRouteService {
     @Autowired
     private RolerouteRepository rolerouteRepository;
 
-    @Override
-    public List<Roleroute> getAll() {
+    @Autowired
+    private RouteRepository routeRepository;
 
-        return rolerouteRepository.findAll().stream()
-                .filter(menu-> Objects.isNull(menu.getParent()))
-                .collect(Collectors.toList());
+    @Override
+    public List<Route> getAll(Optional<Role> role) {
+        List<Roleroute> roleroutesByRole = rolerouteRepository.findRolerouteByRoleIdAndActive(role,true);
+        ArrayList<Route> routeArrayList = new ArrayList<>();
+        for(Roleroute item : roleroutesByRole){
+            routeArrayList.add(item.getRouteId());
+        }
+        return routeArrayList.stream()
+                .filter(menu -> Objects.isNull(menu.getParent()))
+                .toList();
 
     }
 }
